Fix ligature symbols font-size and vertical align

--- a/Resources/public/less/icons/ligaturesymbols.less
+++ b/Resources/public/less/icons/ligaturesymbols.less
@@ -37,6 +37,8 @@
   /* bootstrapp fix */
   background: none !important;
   font-style: normal;
+  font-size: 18px;
+  vertical-align: baseline;
 
   &:before {
     content: @content;
